[gd_scene load_steps=4 format=3 uid="uid://d03tnkaofaf1g"]

[ext_resource type="Texture2D" uid="uid://cr3dnllyh4ly" path="res://sprites/Objects/Egg item.png" id="1_11viw"]
[ext_resource type="Script" path="res://scripts/Egg.gd" id="1_i8xhn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvg0t"]
size = Vector2(6, 6)

[node name="Egg" type="Area2D" groups=["cleaner"]]
script = ExtResource("1_i8xhn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uvg0t")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_11viw")

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
